--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,46 @@
     outline: none;
     box-sizing: border-box;
 }
+
+body {
+    font-family: 'Inter', sans-serif;
+}
+
+.wrapper {
+    position: relative;
+    height: 100vh ;
+}
+
+header {
+    width: 80%;
+    border: 1px solid black;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+header ul {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+header ul li {
+    margin: 0 .4rem;
+}
+
+header ul li a {
+    text-decoration: none;
+    letter-spacing: 1px;
+    font-size: 20px;
+    padding: 15px 20px;
+    border-radius: 20px;
+    transition: all ease .3s;
+}
+
+header ul li a:hover {
+    color: #fff;
+    background-color: #25509e;
+}
