--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     outline: none;
     box-sizing: border-box;
+    flex-wrap: wrap;
 }
 
 body {
@@ -10,7 +11,7 @@ body {
 
 .wrapper {
     position: relative;
-    height: 100vh ;
+    height: 100vh;
 }
 
 header {
@@ -19,7 +20,7 @@ header {
     margin: 0 auto;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-between;   
 }
 
 header ul {
@@ -31,6 +32,8 @@ header ul {
 
 header ul li {
     margin: 0 .4rem;
+    
+    
 }
 
 header ul li a {
@@ -45,4 +48,15 @@ header ul li a {
 header ul li a:hover {
     color: #fff;
     background-color: #25509e;
+}
+
+header ul li a.btn {
+    color: #fff;
+    background-color: #25509e;
+    padding: 15px 40px;
+}
+
+header ul li a.btn:hover {
+    color: #25509e;
+    background-color: #c1d7ff ;
 }
