--- a/css/style.css
+++ b/css/style.css
@@ -84,5 +84,25 @@ ul li:hover .submenu {
 
 .submenu li {
     margin: 0;
-    border: 1px solid red;
+    /*border: 1px solid red;*/
 }
+
+.submenu li a {
+    display: block;
+    width: 100%;
+    font-size: 15px;
+    text-align: center;
+    border-radius: 0;
+}
+
+.submenu li:first-child a {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.submenu li:last-child a {
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+/*Submenu Ends*/
